--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -23,7 +23,7 @@ jobs:
       - run: npm run build:lib
       - run: npm run test:lib
 
-  publish-npm:
+  publish-github-packages:
     needs: test-lib
     runs-on: ubuntu-latest
 
@@ -36,12 +36,12 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: ${{env.NODE_VERSION}}
-          registry-url: https://registry.npmjs.org/
+          registry-url: https://npm.pkg.github.com/
           cache: npm
 
       - run: npm ci
       - run: npm run build:lib
 
-      - run: npm publish dist/ngx-editor/ --provenance
+      - run: npm publish dist/ngx-editor/ --access public
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
