--- a/projects/ngx-editor/package.json
+++ b/projects/ngx-editor/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "ngx-editor",
+  "name": "@davidbbddeveloper/ngx-editor",
   "version": "18.0.0",
   "description": "The Rich Text Editor for Angular, Built on ProseMirror",
   "license": "MIT",
-  "repository": "https://github.com/sibiraj-s/ngx-editor.git",
-  "bugs": "https://github.com/sibiraj-s/ngx-editor/issues",
-  "homepage": "https://github.com/sibiraj-s/ngx-editor",
+  "repository": "https://github.com/davidbbddeveloper/ngx-editor.git",
+  "bugs": "https://github.com/davidbbddeveloper/ngx-editor/issues",
+  "homepage": "https://github.com/davidbbddeveloper/ngx-editor",
   "keywords": [
     "angular-editor",
     "angular-wysiwyg-editor",
@@ -27,7 +27,7 @@
     "@types/trusted-types": "~2.0.7",
     "prosemirror-commands": "^1.6.0",
     "prosemirror-history": "^1.4.1",
-    "prosemirror-inputrules":"^1.4.0",
+    "prosemirror-inputrules": "^1.4.0",
     "prosemirror-keymap": "^1.2.2",
     "prosemirror-model": "^1.22.3",
     "prosemirror-schema-list": "^1.4.1",
