--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test:demo": "ng test demo --browsers ChromeHeadless --watch false",
     "test:lib": "ng test ngx-editor --browsers ChromeHeadless --watch false",
     "test": "npm run test:lib && npm run test:demo",
-    "prepare": "is-ci || husky"
+    "prepare": "is-ci || husky",
+    "format:all": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\""
   },
   "engines": {
     "node": ">=18",
