--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@Components/*": ["src/components/*"],
-    },
-  },
+      "@Components/*": ["src/components/*"]
+    }
+  }
 }
