--- a/projects/ngx-editor/.eslintrc.json
+++ b/projects/ngx-editor/.eslintrc.json
@@ -1,13 +1,9 @@
 {
   "extends": "../../.eslintrc.json",
-  "ignorePatterns": [
-    "!**/*"
-  ],
+  "ignorePatterns": ["!**/*"],
   "overrides": [
     {
-      "files": [
-        "*.ts"
-      ],
+      "files": ["*.ts"],
       "parserOptions": {
         "project": ["projects/ngx-editor/tsconfig.(app|lib|spec).json"]
       },
@@ -31,9 +27,7 @@
       }
     },
     {
-      "files": [
-        "*.html"
-      ],
+      "files": ["*.html"],
       "rules": {}
     }
   ]
