--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,9 @@
       "@davidbbddeveloper/ngx-editor/utils": ["./dist/ngx-editor/utils"],
       "@davidbbddeveloper/ngx-editor/schema": ["./dist/ngx-editor/schema"],
       "@davidbbddeveloper/ngx-editor/commands": ["./dist/ngx-editor/commands"],
-      "@davidbbddeveloper/ngx-editor/input-rules": ["./dist/ngx-editor/input-rules"],
+      "@davidbbddeveloper/ngx-editor/input-rules": [
+        "./dist/ngx-editor/input-rules"
+      ],
       "@davidbbddeveloper/ngx-editor/helpers": ["./dist/ngx-editor/helpers"]
     },
     "esModuleInterop": true,
